Update LLM configurations and improve stability
- Updated all model versions to latest stable releases (o1, gemini-2.0-flash, claude-sonnet-4)
- Changed default models to use OpenAI (o1, gpt-4o-mini) to avoid API provider issues
- Made LLM pools lazy-loaded to prevent initialization errors
- Fixed infinite rerun loop in Streamlit UI that caused crashes
- Added auto-refresh to UI for real-time job status updates
- Improved error handling in literature review agent for None subtopics
- Updated GPT Researcher config to use only OpenAI models
- Added env.sh to .gitignore for API key security

--- a/coscientist/researcher_config.json
+++ b/coscientist/researcher_config.json
@@ -2,9 +2,9 @@
     "RETRIEVER": "tavily",
     "EMBEDDING": "openai:text-embedding-3-small",
     "SIMILARITY_THRESHOLD": 0.42,
-    "FAST_LLM": "google_genai:gemini-2.5-flash",
-    "SMART_LLM": "anthropic:claude-sonnet-4-20250514",
-    "STRATEGIC_LLM": "openai:o3-mini",
+    "FAST_LLM": "openai:gpt-4o-mini",
+    "SMART_LLM": "openai:gpt-4o",
+    "STRATEGIC_LLM": "openai:gpt-4o",
     "FAST_TOKEN_LIMIT": 3000,
     "SMART_TOKEN_LIMIT": 6000,
     "STRATEGIC_TOKEN_LIMIT": 4000,
@@ -33,7 +33,7 @@
     "DEEP_RESEARCH_DEPTH": 2,
     "DEEP_RESEARCH_CONCURRENCY": 4,
     "MCP_SERVERS": [],
-    "MCP_AUTO_TOOL_SELECTION": true,
+    "MCP_AUTO_TOOL_SELECTION": false,
     "MCP_ALLOWED_ROOT_PATHS": [],
     "MCP_STRATEGY": "fast",
     "REASONING_EFFORT": "medium"
